# biquinho

./: .gitignore  Cargo.toml  README.md
.github/workflows/: generate-release.yml  release.yml  rust.yml
src/: annotation.rs  camera.rs  colour.rs  data.rs  image_copy.rs  image_plugin.rs  imc.rs  main.rs  transform.rs
src/ui/: annotation.rs  classification.rs  mod.rs
