[package]
name = "biquinho"
version = "0.2.11"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy_egui = {version = "0.19", features = ["serde"]}
bevy_egui = { git = "https://github.com/AlanRace/bevy_egui", branch="serde", features = ["serde"]}
bevy_prototype_lyon = "0.7" 
hex = "0.4"
image = "0.24.1"
tiff = "0.7.4"
imageproc = "0.23"
rfd = "0.10"
chrono = "0.4.23"

# Interacting with clipboard
arboard = "3.2.0"

wgpu = "0.14"
pollster = "0.2.5"
futures-intrusive = "0.4.0"

# Colour mixing
mixbox = "2.0.0" 

# Required to allow changing of the icon. This version must match the bevy version
winit = "0.27.4"

# Required for annotations
geo-types = { version = "0.7", default-features = false, features=["serde"] }
geo-booleanop = {git = "https://github.com/21re/rust-geo-booleanop", rev="69babb32"} #{path = '../rust-geo-booleanop/lib'}

# Required for transforms
nalgebra = "0.31.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

# Required for classification
smartcore = "0.2.1"

# Needed for async
futures-lite = "1.11.3"

# IMC specific crates
imc-rs = {version = "0.1", optional = true} #{path = "../imc-rs/lib", optional = true} # 

[features]
default = ["imc"]
imc = ["dep:imc-rs"]

[dev-dependencies]

[dependencies.bevy]
version = "0.9"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
#  "dynamic",
#  "bevy_dynamic_plugin",
  "render",
  "bevy_winit",
#  "bevy_gilrs", # Adds gamepad support.
  "bevy_gltf", # https://www.khronos.org/gltf/
  "png",
  "hdr",
  # "x11"
  "wayland"
]



[profile.dev]
opt-level = 3


# [patch.crates-io]
#bevy_egui = { path = "../bevy_egui" }
#egui = {path = "../egui"}
#egui = { git = "https://github.com/emilk/egui"}
